tests/samples/negative/pointers/assign_field_through_const_pointer.ax
module assign_field_through_const_pointer;

struct Pair {
    value: i32;
}

fn as_const_pair_ptr(value: &Pair) -> *const Pair {
    return unsafe { ptrat<*const Pair>(ptraddr(value)) };
}

fn main() -> i32 {
    let pair: Pair = Pair { value: 1 };
    let ptr: *const Pair = as_const_pair_ptr(&pair);
    unsafe {
        ptr.value = 42;
    }
    return 0;
}
